kustomize/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pit-stg
  labels:
    environment: staging
    app: pit
