kustomize/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pit
spec:
  template:
    metadata:
      labels:
        environment: staging
